Refactor: improve Java compatibility and add code comments (#11256)